--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^4.30.3",
+    "@xixixao/uploadstuff": "^0.0.5",
     "convex": "^1.7.1",
     "jotai": "^2.6.2",
     "react": "^18.2.0",
